# resonancenet

./: .gitignore  CMakeLists.txt  COPYING  README.md  build.bat  build.sh  build_all.bat  index.html  vcpkg.json
.github/workflows/: ci.yml  release.yml
deploy/: Dockerfile  docker-compose.yml  install-linux.sh  resonancenet.nsi  rnetd.service
src/: rnet-cli.cpp  rnet-miner.cpp  rnet-tx.cpp  rnet-util.cpp  rnet-wallet-tool.cpp  rnetd.cpp
src/chain/: CMakeLists.txt  block_index.cpp  block_index.h  chainstate.cpp  chainstate.h  coins.cpp  coins.h  reorg.cpp  reorg.h  storage.cpp  storage.h  utxo_db.cpp  utxo_db.h
src/common/: CMakeLists.txt  chainparams.cpp  chainparams.h
src/consensus/: CMakeLists.txt  block_reward.cpp  block_reward.h  block_verify.cpp  block_verify.h  genesis.cpp  genesis.h  growth_policy.cpp  growth_policy.h  merkle.cpp  merkle.h  params.cpp  params.h  proof_of_training.cpp  proof_of_training.h  sigcache.cpp  sigcache.h  tx_verify.cpp  tx_verify.h  validation.cpp  validation.h
src/core/: CMakeLists.txt  arena.cpp  arena.h  base58.cpp  base58.h  bech32.cpp  bech32.h  channel.cpp  channel.h  config.cpp  config.h  error.cpp  error.h  fs.cpp  fs.h  hex.cpp  hex.h  logging.cpp  logging.h  random.cpp  random.h  serialize.cpp  serialize.h  signal.cpp  signal.h  stream.cpp  stream.h  sync.cpp  sync.h  thread.cpp  thread.h  time.cpp  time.h  types.cpp  types.h  varint.cpp  varint.h
src/crypto/: CMakeLists.txt  aes.cpp  aes.h  argon2.cpp  argon2.h  bip32.cpp  bip32.h  bip39.cpp  bip39.h  bip39_wordlist.h  chacha20.cpp  chacha20.h  ed25519.cpp  ed25519.h  hash.cpp  hash.h  keccak.cpp  keccak.h  merkle.cpp  merkle.h  secp256k1.cpp  secp256k1.h  siphash.cpp  siphash.h
src/gpu/: CMakeLists.txt  backend.cpp  backend.h  context.cpp  context.h  kernels.h  tensor.cpp  tensor.h
src/gpu/cpu/: cpu_backend.cpp  cpu_backend.h
src/gpu/cuda/: cuda_backend.cpp  cuda_backend.h  cuda_context.cpp  cuda_context.h  kernels.cu
src/gpu/metal/: metal_backend.cpp  metal_backend.h  metal_context.cpp  metal_context.h
src/gpu/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_context.cpp  vulkan_context.h
src/inference/: CMakeLists.txt  batch.cpp  batch.h  engine.cpp  engine.h  quantize.cpp  quantize.h  sampler.cpp  sampler.h  server.cpp  server.h  state.cpp  state.h
src/lightning/: CMakeLists.txt  channel.cpp  channel.h  channel_db.cpp  channel_db.h  channel_state.cpp  channel_state.h  gossip.cpp  gossip.h  htlc.cpp  htlc.h  invoice.cpp  invoice.h  onion.cpp  onion.h  payment.cpp  payment.h  peer.cpp  peer.h  router.cpp  router.h  watchtower.cpp  watchtower.h
src/mempool/: CMakeLists.txt  ancestors.cpp  ancestors.h  entry.cpp  entry.h  fee_estimator.cpp  fee_estimator.h  orphans.cpp  orphans.h  pool.cpp  pool.h  rbf.cpp  rbf.h
src/miner/: CMakeLists.txt  block_assembler.cpp  block_assembler.h  block_template.cpp  block_template.h  coinbase.cpp  coinbase.h  difficulty.cpp  difficulty.h  miner.cpp  miner.h  training_solver.cpp  training_solver.h  worker.cpp  worker.h
src/net/: CMakeLists.txt  addr_man.cpp  addr_man.h  addr_manager.cpp  addr_manager.h  ban.cpp  ban.h  checkpoint_store.cpp  checkpoint_store.h  conn_manager.cpp  conn_manager.h  connection.cpp  connection.h  message.cpp  message.h  msg_handler.cpp  msg_handler.h  peer.cpp  peer.h  protocol.cpp  protocol.h  sync.cpp  sync.h  sync_manager.cpp  sync_manager.h  transport.cpp  transport.h
src/node/: CMakeLists.txt  context.cpp  context.h  init.cpp  init.h  shutdown.cpp  shutdown.h
src/primitives/: CMakeLists.txt  address.cpp  address.h  amount.cpp  amount.h  block.cpp  block.h  block_header.cpp  block_header.h  fees.cpp  fees.h  outpoint.cpp  outpoint.h  transaction.cpp  transaction.h  txin.cpp  txin.h  txout.cpp  txout.h  witness.cpp  witness.h
src/rpc/: CMakeLists.txt  blockchain.cpp  blockchain.h  client.cpp  client.h  control.cpp  control.h  lightning_rpc.cpp  lightning_rpc.h  mining.cpp  mining.h  misc.cpp  misc.h  network.cpp  network.h  rawtransaction.cpp  rawtransaction.h  request.cpp  request.h  server.cpp  server.h  training_rpc.cpp  training_rpc.h  util.cpp  util.h  wallet_rpc.cpp  wallet_rpc.h
src/script/: CMakeLists.txt  interpreter.cpp  interpreter.h  opcodes.cpp  opcodes.h  recovery_script.cpp  recovery_script.h  script.cpp  script.h  sign.cpp  sign.h  standard.cpp  standard.h  verify.cpp  verify.h
src/training/: CMakeLists.txt  checkpoint_io.cpp  checkpoint_io.h  data_loader.cpp  data_loader.h  evaluator.cpp  evaluator.h  lr_schedule.cpp  lr_schedule.h  model_config.cpp  model_config.h  tokenizer.cpp  tokenizer.h  training_engine.cpp  training_engine.h
src/wallet/: CMakeLists.txt  addresses.cpp  addresses.h  backup.cpp  backup.h  balance.cpp  balance.h  coins.cpp  coins.h  create_tx.cpp  create_tx.h  encrypt.cpp  encrypt.h  fees.cpp  fees.h  hd.cpp  hd.h  heartbeat.cpp  heartbeat.h  keys.cpp  keys.h  notify.cpp  notify.h  recovery.cpp  recovery.h  sign_tx.cpp  sign_tx.h  spend.cpp  spend.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
test/: CMakeLists.txt  main.cpp  test_chain.cpp  test_consensus.cpp  test_core.cpp  test_crypto.cpp  test_framework.h  test_growth.cpp  test_inference.cpp  test_lightning.cpp  test_mempool.cpp  test_miner.cpp  test_net.cpp  test_primitives.cpp  test_recovery.cpp  test_wallet.cpp
tools/: prepare_dataset.cpp  train_test.cpp
